# graphic_engine

./: .gitignore  CMakeLists.txt  README.md  glad.c  main.cpp  math_3d.cpp  math_3d.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shapes_generator.cpp  shapes_generator.h
dependencies/include/glad/: glad.h
